# ship-studio

./: .gitignore  AGENTS.md  BACKGROUND_SESSIONS_PLAN.md  BACKLOG.md  BUGS_AND_IMPROVEMENTS.md  CLAUDE.md  CLAUDE.md.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FRICTION_PLAN.md  LICENSE  MORNING_REPORT.md  PROGRESS.md  README.md  RELEASE_NOTES.md  RELEASING.md  REVIEW_QUEUE.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  release-windows.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-toolbar-cleanup/: 01-VERIFICATION.md
.redline-loop/: .gitignore  BACKLOG.md  DESIGN.md  MORNING_REPORT.md  PROGRESS.md  REVIEW_QUEUE.md
docs/: FORKING.md  INSTALLATION.md  analytics.md  design-system.md  visual-editor-css-mode.md
docs/internal/: DX_AUDIT_BASELINE.md  README.md  cross-platform-mobile-plan.md  mobile-app-preview-plan.md  mobile-app-preview-status.md
scripts/: build-notarized.sh  check-loc-limits.sh  install.ps1  install.sh
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/plugins/tauri-plugin-pty/: Cargo.toml
src-tauri/plugins/tauri-plugin-pty/permissions/autogenerated/: reference.md
src-tauri/plugins/tauri-plugin-pty/permissions/schemas/: schema.json
src-tauri/plugins/tauri-plugin-pty/src/: lib.rs
src-tauri/src/: agent.rs  lib.rs  main.rs  state.rs  static_server.rs  types.rs  utils.rs
src-tauri/src/commands/: accounts.rs  ai.rs  assets.rs  claude.rs  code.rs  conflicts.rs  custom_classes.rs  edit.rs  edit_css.rs  env.rs  external_projects.rs  git.rs  github.rs  ide.rs  mcp.rs  mobile.rs  mod.rs  plugins.rs  projects.rs  pty.rs  pty_session.rs  publishing.rs  pull_requests.rs  redline.rs  settings.rs  setup.rs  skills.rs  snapshots.rs  static_server.rs  vercel.rs
src-tauri/src/commands/git/: branches.rs  mod.rs  stash.rs  status.rs  sync.rs
src-tauri/src/commands/ide/screenshots/: base.rs  stitch.rs
src-tauri/src/commands/plugins/: mod.rs  plugin_lifecycle.rs
src-tauri/src/commands/projects/: detection.rs  dev_server.rs  metadata.rs  mod.rs  pins.rs  sessions.rs  templates.rs  ui_state.rs
src-tauri/src/commands/pty/: mod.rs  spawn.rs  stream.rs
src-tauri/src/commands/setup/: agents.rs  auth.rs  install.rs  mod.rs  status.rs
src-tauri/src/commands/skills/: install.rs  search.rs
src-tauri/src/proxy/: html.rs  mod.rs  select_script.html
src/commands/: frecency.test.ts  registry.test.ts  score.test.ts  useAppCommands.tsx  useRedlineCommands.tsx  useWorkspaceCommands.tsx
src/components/: BranchIndicator.tsx  BrowserDropdown.tsx  Changelog.tsx  CodeHealthPanel.tsx  CompactTopbar.tsx  CompactWorkspace.tsx  ConnectOverlay.tsx  CreateProject.tsx  DashboardHeader.tsx  DevServerStatus.test.tsx  DevServerStatus.tsx  DeviceMirror.test.tsx  DeviceMirror.tsx  DiffModal.tsx  EducationOverlay.tsx  EnvEditor.tsx  GitHubButton.tsx  GitHubCalendar.tsx  HelpModal.tsx  ImportProject.tsx  IntegrationBar.tsx  McpModal.tsx  MoveFolderModal.tsx  NewFolderModal.tsx  PluginManager.tsx  PluginSlot.tsx  Preview.tsx  ProjectCard.tsx  ProjectCardMenu.tsx  ProjectGridView.tsx  ProjectList.tsx  ProjectRail.test.tsx  ProjectRail.tsx  ProjectSettingsModal.tsx  ProjectsView.tsx  PublishBranchDropdown.tsx  PublishDropdown.tsx  README.md  ScreenshotPreview.tsx  SettingsModal.tsx  (+12 more)
src/components/CompactMode/: CompactActionsRow.tsx
src/components/accounts/: AccountCard.tsx  AccountSelectScreen.tsx  AccountSettingsModal.tsx  NewAccountModal.tsx
src/components/branches/: BranchesTab.tsx  CreateBranchConflictModal.tsx  GitHubButton.tsx  PublishBranchDropdown.test.tsx  PublishBranchDropdown.tsx  SubmitReviewModal.test.tsx  SubmitReviewModal.tsx
src/components/code/: CodeFileEditor.tsx  CodeTab.tsx  CodeViewer.tsx  ConflictPromptModal.tsx  FileTree.tsx  FileTreeContextMenu.test.tsx  (+1 more)
src/contexts/: AgentBridgeContext.tsx  ModalContext.tsx  PluginContext.tsx  ToastContext.tsx
src/hooks/: useActiveAccount.ts  useActiveAgentStatus.ts  useAppSetup.ts  useClickOutside.ts  useCssAnimations.ts  useCssCascadeEditor.ts  useCssEditor.ts  useCssVariables.ts  useDevServer.test.ts  useDevServer.ts  useElementSettings.ts  useElementTree.ts  useFileTree.test.ts  useFileTree.ts  useIntegrationStatus.ts  useIsCompact.ts  useOsImport.ts  usePinnedProjects.ts  usePlugins.ts  usePreviewCapture.ts  usePreviewConnection.test.ts  usePreviewConnection.ts  usePreviewResize.ts  useProjectCreation.ts  useProjectLifecycle.ts  useProjectRail.ts  useRedline.test.ts  useRedline.ts  useSnapshots.ts  useTerminalManagement.ts  useTextEditing.test.ts  useTextEditing.ts  useTreeDnd.ts  useVisualEditor.test.ts  useVisualEditor.ts  useWorkspaceConnect.tsx  useWorkspaceLayout.test.ts  useWorkspaceLayout.ts  useWorkspaceTour.ts
src/lib/: accounts.ts  agent.test.ts  agent.ts  agents-management.ts  ai.ts  ansi.test.ts  branches.ts  claude.ts  code.ts  codemirror.ts  color.test.ts  cssBody.modern.test.ts  cssBody.test.ts  cssBody.ts  cssCascade.test.ts  cssCascade.ts  cssControls.ts  cssPredict.test.ts  cssPredict.ts  cssProperties.test.ts  cssProperties.ts  cssStructures.test.ts  cssStructures.ts  customClasses.test.ts  customClasses.ts  edit-css.ts  edit-html.ts  edit.test.ts  edit.ts  editControls.ts  educationContent.ts  elementTreeFilter.test.ts  elementTreeFilter.ts  errors.test.ts  git.ts  github.ts  highlight.ts  htmlAttrs.test.ts  htmlAttrs.ts  ide.ts  (+29 more)
src/styles/: backups-modal.css  base.css  branches.css  bug-report.css  changelog.css  cms.css  code-mode.css  compact-mode.css  dashboard.css  diff-modal.css  education-mode.css  env-editor.css  help-modal.css  import-project.css  index.css  mcp-modal.css  plugins.css  project-grid.css  project-list.css  publish.css  setup.css  skills-modal.css  toolbar.css  update-banner.css  workspace.css
src/test/: setup.ts
test-plugins/hello-world/: plugin.json
(+137 files in other folders)
