[package]
name = "ship-studio"
version = "0.3.41"
description = "Ship Studio - Launch Claude Code for marketing sites"
authors = ["Julian Galluzzo"]
edition = "2021"

[lib]
name = "ship_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-pty = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros", "process"] }
dirs = "5"
which = "6"
base64 = "0.22"
url = "2"
tauri-plugin-screenshots = "2.2.0"
tauri-plugin-fs = "2"
image = { version = "0.25.9", default-features = false, features = ["png"] }
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2.3.1"
tauri-plugin-deep-link = "2"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
once_cell = "1.19"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
zip = "2"
tauri-plugin-dialog = "2"
walkdir = "2"
urlencoding = "2"

# macOS-specific dependencies for WebKit JavaScript evaluation
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString"] }
block2 = "0.5"
