[package]
name = "tauri-plugin-pty"
version = "0.2.0"
edition = "2021"
description = "Pseudo Terminal (PTY) plugin for Tauri (forked to fix blocking I/O)"
links = "tauri-plugin-pty"

[lib]
name = "tauri_plugin_pty"
path = "src/lib.rs"

[dependencies]
portable-pty = { version = "0.9.0", features = ["serde_support"] }
serde = "1.0"
serde_json = "1.0"
tauri = "^2"
tokio = { version = "1", features = ["rt"] }

[build-dependencies]
tauri-plugin = { version = "^2", features = ["build"] }
